force-app/main/default/objects/cwbtool__FieldAnalysis__c/cwbtool__FieldAnalysis__c.object-meta.xml
<CustomObject>
    <label>Field Analysis</label>
    <nameField>
        <label>Field Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Field Analysis</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>