force-app/main/default/objects/cwbtool__FieldAnalysis__c/fields/cwbtool__Latest_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>cwbtool__Latest_Created_Date__c</fullName>
    <label>Latest Created Date</label>
    <type>DateTime</type>
</CustomField>