force-app/main/default/objects/cwbtool__FieldAnalysis__c/fields/cwbtool__Latest_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>cwbtool__Latest_Record_Id__c</fullName>
    <label>Latest Record Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>