force-app/main/default/objects/cwbtool__FieldAnalysis__c/fields/cwbtool__MetaData_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>cwbtool__MetaData_Created_Date__c</fullName>
    <label>MetaData Created Date</label>
    <length>100</length>
    <type>Text</type>
</CustomField>