force-app/main/default/objects/cwbtool__FieldAnalysis__c/fields/cwbtool__MetaDataModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>cwbtool__MetaDataModifiedDate__c</fullName>
    <label>MetaData Modified Date</label>
    <length>100</length>
    <type>Text</type>
</CustomField>