force-app/main/default/objects/cwbtool__FieldAnalysis__c/fields/cwbtool__Object__c.field-meta.xml
<CustomField>
    <fullName>cwbtool__Object__c</fullName>
    <formula>cwbtool__ObjectAnalysis__r.cwbtool__ObjectName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Object</label>
    <type>Text</type>
</CustomField>