force-app/main/default/objects/cwbtool__FieldAnalysis__c/fields/cwbtool__ObjectAnalysis__c.field-meta.xml
<CustomField>
    <fullName>cwbtool__ObjectAnalysis__c</fullName>
    <label>ObjectAnalysis</label>
    <referenceTo>cwbtool__FieldTrack__c</referenceTo>
    <relationshipLabel>Field Analysis</relationshipLabel>
    <relationshipName>Field_Analysises</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>