force-app/main/default/objects/cwbtool__FieldAnalysis__c/fields/cwbtool__PopulatedOn2__c.field-meta.xml
<CustomField>
    <fullName>cwbtool__PopulatedOn2__c</fullName>
    <formula>IF(cwbtool__PopulatedOnPercent__c&gt;100,100,cwbtool__PopulatedOnPercent__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PopulatedOn (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>