force-app/main/default/objects/cwbtool__FieldAnalysis__c/fields/cwbtool__PopulatedOn__c.field-meta.xml
<CustomField>
    <fullName>cwbtool__PopulatedOn__c</fullName>
    <label>Populated On</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>