force-app/main/default/objects/cwbtool__FieldAnalysis__c/fields/cwbtool__PopulatedOnPercent__c.field-meta.xml
<CustomField>
    <fullName>cwbtool__PopulatedOnPercent__c</fullName>
    <formula>if( cwbtool__ObjectAnalysis__r.cwbtool__Records__c &gt;0, (  cwbtool__PopulatedOn__c  *100)/  cwbtool__ObjectAnalysis__r.cwbtool__Records__c , 0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PopulatedOn (%) deprecated</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>