force-app/main/default/objects/cwbtool__FieldAnalysis__c/fields/cwbtool__Record_Created_By__c.field-meta.xml
<CustomField>
    <fullName>cwbtool__Record_Created_By__c</fullName>
    <label>Record Created By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>