force-app/main/default/objects/cwbtool__FieldAnalysis__c/fields/cwbtool__Type__c.field-meta.xml
<CustomField>
    <fullName>cwbtool__Type__c</fullName>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>