force-app/main/default/objects/cwbtool__FieldAnalysis__c/fields/cwbtool__View_Record__c.field-meta.xml
<CustomField>
    <fullName>cwbtool__View_Record__c</fullName>
    <formula>if(cwbtool__Latest_Record_Id__c!=null &amp;&amp; cwbtool__Latest_Record_Id__c!=&apos;&apos;,HYPERLINK(&quot;/&quot;+ cwbtool__Latest_Record_Id__c , &quot;View Record&quot;, &quot;_blank&quot;),&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>View Record</label>
    <type>Text</type>
</CustomField>